multiframework-demo/force-app/main/default/objects/TokenUsage__c/TokenUsage__c.object-meta.xml
<CustomObject>
    <label>Token Usage</label>
    <nameField>
        <label>Token Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Token Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>