multiframework-demo/force-app/main/default/objects/TokenUsage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Token Usages</relationshipLabel>
    <relationshipName>TokenUsages</relationshipName>
    <type>Lookup</type>
</CustomField>