multiframework-demo/force-app/main/default/objects/TokenUsage__c/fields/LoginPercentage__c.field-meta.xml
<CustomField>
    <fullName>LoginPercentage__c</fullName>
    <label>Login Percentage</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>