multiframework-demo/force-app/main/default/objects/TokenUsage__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>