multiframework-demo/force-app/main/default/objects/TokenUsage__c/fields/TokenLimit__c.field-meta.xml
<CustomField>
    <fullName>TokenLimit__c</fullName>
    <label>Token Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>