multiframework-demo/force-app/main/default/objects/TokenUsage__c/fields/TokensUsed__c.field-meta.xml
<CustomField>
    <fullName>TokensUsed__c</fullName>
    <label>Tokens Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>